# jsonschema-rs

./: .gitignore  Cargo.toml  README.md  评分细则.md
benches/: benchmark.rs
python_bench/: bench_fastjsonschema.py  bench_jsonschema.py
report/: invalid_demo.json  perf_data.md  report.md  schema_demo.json
src/: compiler.rs  error.rs  instance.rs  lib.rs  main.rs  refs.rs  types.rs  validator.rs
src/keyword/: applicator.rs  arrays.rs  assertions.rs  format.rs  mod.rs  numeric.rs  objects.rs  string.rs
tests/: integration.rs  runner.rs
