[package]
name = "jsonschema-rs"
version = "0.1.0"
edition = "2021"
description = "A fast JSON Schema validator written in Rust — rewrite of Python jsonschema"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
rayon = "1"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
